# project_practice

./: .gitignore  pyproject.toml
config/settings/: base.py  local.py  prod.py
